Fixed CalcArray Documentation blog post image being too big on mobile

--- a/Blog Posts/Blog Posts.css
+++ b/Blog Posts/Blog Posts.css
@@ -32,6 +32,7 @@ html {
 .page_image {
     height: 250px;
     width: auto;
+    max-width: 50%;
     float: left;
 }
 .page_title {
